--- a/client/src/App.css
+++ b/client/src/App.css
@@ -5,14 +5,16 @@ body{
 .App {
   height: 100vh;
   width: 100vw;
-  color: black;
-  background-color: #FFE8F7;
+  color: #37334B;
+  background-color: #E7E0FF;
+  cursor: none;
 }
 
 .nav{
   display: flex;
-  justify-content: flex-end;
-  padding: 20px;
+  justify-content:space-between;
+  padding: 40px;
+  padding-right: 50px;
   align-items: center;
   height: 10%;
   /* border: 2px solid red; */
@@ -20,7 +22,34 @@ body{
 }
 
 .body{
+  margin-top: 10vh;
   display: flex;
   justify-content: center;
   /* background-color: green; */
+}
+
+::selection{
+    color: white;
+    background-color: #B49BFF;
+}
+
+.page-links{
+  display: flex;
+  gap: 40px;
+}
+
+.page-links .link{
+  font-size: 18px;
+  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-weight: 600;
+  border-radius: 25px;
+  padding: 5px;
+  padding-left: 15px;
+  padding-right: 15px;
+  transition: ease-in-out 0.3s;
+}
+
+.page-links .link:hover{
+  background-color: #B49BFF;
+  color: white;
 }
