--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,31 +1,17 @@
 body{
-  background-color: #FFE8F7;
-}
-
-.App {
-  height: 100vh;
-  width: 100vw;
-  color: #37334B;
-  background-color: #E7E0FF;
+  box-sizing: border-box;
+  justify-content: center;
   cursor: none;
 }
 
-.nav{
-  display: flex;
-  justify-content:space-between;
-  padding: 40px;
-  padding-right: 50px;
-  align-items: center;
-  height: 10%;
-  /* border: 2px solid red; */
-  box-sizing: border-box;
-}
-
-.body{
-  margin-top: 10vh;
+.App {    
   display: flex;
   justify-content: center;
-  /* background-color: green; */
+  width: 98vw;
+  color: #37334B;
+  background-color: #E7E0FF;
+  border: 2px solid blue;
+  box-sizing: border-box;
 }
 
 ::selection{
@@ -33,23 +19,3 @@ body{
     background-color: #B49BFF;
 }
 
-.page-links{
-  display: flex;
-  gap: 40px;
-}
-
-.page-links .link{
-  font-size: 18px;
-  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  font-weight: 600;
-  border-radius: 25px;
-  padding: 5px;
-  padding-left: 15px;
-  padding-right: 15px;
-  transition: ease-in-out 0.3s;
-}
-
-.page-links .link:hover{
-  background-color: #B49BFF;
-  color: white;
-}
