added input form for frontend and some minor changes

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -10,7 +10,7 @@ body{
   width: 98vw;
   color: #37334B;
   background-color: #E7E0FF;
-  border: 2px solid blue;
+  /* border: 2px solid blue; */
   box-sizing: border-box;
 }
 
