--- a/client/src/App.css
+++ b/client/src/App.css
@@ -19,3 +19,15 @@ body{
     background-color: #B49BFF;
 }
 
+::-webkit-scrollbar{
+  width: 7px;
+}
+
+::-webkit-scrollbar-track{
+  background-color: #E7E0FF;
+}
+
+::-webkit-scrollbar-thumb{
+  background-color: #8760ff;
+  border-radius: 50px;
+}
