--- a/client/src/components/Navbar.css
+++ b/client/src/components/Navbar.css
@@ -11,7 +11,8 @@
   height: 10%;
   /* border: 2px solid red; */
   box-sizing: border-box;
-  background-color: #E7E0FF;
+  background-color: rgba(231, 224, 255,0.7);
+  backdrop-filter: blur(5px);
 }
 
 .page-links {
