--- a/client/src/components/Participate.css
+++ b/client/src/components/Participate.css
@@ -98,6 +98,13 @@ input:focus{
     color: white;
 }
 
+.loading{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
 @media (max-width:768px) {
     .contact{
         margin-top: 3vh;
@@ -119,7 +126,5 @@ input:focus{
 
     .btn{
         width: 25vw;
-        background-color: #FE8D59;
-        color: white;
     }
 }
